Added ben's site and started updgrading the old param VCs

--- a/Synthesizer/Controller/GUI/about.html
+++ b/Synthesizer/Controller/GUI/about.html
@@ -17,6 +17,7 @@
 @"<li>Author: <a href=\"http://vaporwarewolf.com/WP_Test/\">Zakk Hoyt (VaporWareWolf Software)</a></li>"
 @"<li>Email: <a href=\"mailto:vaporwarewolf@gmail.com\">vaporwarewolf@gmail.com</a></li>"
 @"<li>Source Code: <a href=\"https://github.com/zakkhoyt/Synthesizer\">github.com/zakkhoyt/Synthesizer</a></li>"
+@"<li>Art Work: <a href=\"http://minterart.tumblr.com\">Benjamin Minter</a></li>"
 @"</ul>"
 @"</body>"
 @"</html>"
