Updated about screen

--- a/Synthesizer/Controller/GUI/about.html
+++ b/Synthesizer/Controller/GUI/about.html
@@ -21,3 +21,32 @@
 @"</ul>"
 @"</body>"
 @"</html>"
+
+
+
+
+
+
+
+
+
+
+
+
+About:
+The theremin (originally known as the ætherphone/etherphone or termenvox/thereminvox) is an early electronic musical instrument controlled without physical contact by the thereminist (performer). It is named after the westernized name of its Russian inventor, Léon Theremin, who patented the device in 1928.
+
+The instrument's controlling section usually consists of two metal antennas which sense the relative position of the thereminist's hands and control oscillators for frequency with one hand, and amplitude (volume) with the other. The electric signals from the theremin are amplified and sent to a loudspeaker.
+
+The Motion Sensor Theremin iOS App uses the device's motion sensors and touchscreen (instead of capacitance and antennaes) to modify the frequency of the output waveform. Inputs include touchscreen (x,y), accelerometers (x,y,z), gyroscopes (x,y,z), and the magnetometers (x,y,z). For each individual axis you can adjust max/min frequency, sensitivity, waveform, and effects.
+
+The synthesizer itself is very basic and is based off of the mathematical sine function. The synthisizer is available as an open source stand-alone Objective-C library for use in any project you can think of. It is included as a subdirectory in the source code for this project.
+
+Software by: Zakk Hoyt (VaporWareWolf Software)
+Homepage: http://vaporwarewolf.com/WP_Test/
+Email: vaporwarewolf@gmail.com
+Source Code: https://github.com/zakkhoyt/Synthesizer
+iTunes Page: https://itunes.apple.com/us/app/motion-sensor-theremin-free/id570320684?mt=8
+
+Art Work by: Benjamin Minter
+Homepage: http://minterart.tumblr.com
